--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  text-align: center;
+}
+
+#root{
+width: 100vw;
+}
+.not-found{
+  display: flex;
+  text-align: center;
+  flex-direction: column;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li {
+  padding-right: 2em;
 }
